spacing issue fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,10 +11,13 @@
   .container {
     @apply mx-auto;
     max-width: 1280px;
-
+    padding-right:  1rem;
+    padding-left:  1rem;
     @screen sm {
       max-width: 720px;
     }
+    
+    
   }
 }
 
